# Django-Blog-App

./: README.MD  pyproject.toml  requirements.txt
myapp/blog/: models.py  serializers.py  urls.py  views.py
myapp/blog/migrations/: 0001_initial.py  0002_remove_post_author_delete_author.py  0003_alter_post_pub_date.py  0004_user_alter_post_pub_date_delete_likes_user_likes.py
myapp/myapp/: settings.py  urls.py
