[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Tyler Hanson"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
